# cmdb

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  REQUIREMENTS.md  docker-compose.yml  docker-entrypoint.sh  main.py  pyproject.toml  requirements.txt  start.sh
assets/: admin.py  agent.py  api_views.py  apps.py  execution.py  forms.py  models.py  services.py  tests.py  urls.py  utils.py  views.py
assets/management/commands/: check_servers.py  cleanup_servers.py  process_execution_tasks.py
assets/migrations/: 0001_initial.py  0002_systemconfig.py  0003_executionrun_executiontask_executiontasktarget_and_more.py  0004_archivedserver_archivedhardwareinfo.py  0005_server_bmc_ip.py  0006_alter_server_bmc_ip_delete_archivedhardwareinfo_and_more.py  0007_systemconfig_server_base_url.py  0008_credential.py  0009_remove_credential_description.py  0010_server_oob_password_server_oob_username.py
cmdb/: asgi.py  settings.py  urls.py  wsgi.py
templates/: add_server.html  base.html  confirm_delete.html  credential_form.html  credential_list.html  server_archive_list.html  server_detail.html  server_list.html  server_oob_form.html  system_settings.html  task_create.html  task_detail.html  task_list.html
