[project]
name = "cmdb"
version = "0.1.0"
description = "CMDB 资产管理系统"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=4.2,<4.3",
    "djangorestframework>=3.14.0,<3.15",
    "paramiko>=3.3.1,<4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
